--- a/download.ipynb
+++ b/download.ipynb
@@ -2,18 +2,231 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a2421e1f-f416-4e86-b07a-007f7e89e9c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import yfinance"
+    "import yfinance as yf\n",
+    "import datetime\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "03408c3d-881a-4e36-838a-cccc3a875cef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Getting the index data from yahoo finance\n",
+    "\n",
+    "start_date = \"2000-01-01\"\n",
+    "end_date = \"2024-06-01\"\n",
+    "ticker = \"^BVSP\"\n",
+    "\n",
+    "stock_data = yf.download(ticker, start=start_date, end=end_date, interval = '1d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fc6e19b0-5062-4ee3-84e7-7735f9003299",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-01-03</th>\n",
+       "      <td>17098.0</td>\n",
+       "      <td>17408.0</td>\n",
+       "      <td>16719.0</td>\n",
+       "      <td>16930.0</td>\n",
+       "      <td>16930.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-04</th>\n",
+       "      <td>16908.0</td>\n",
+       "      <td>16908.0</td>\n",
+       "      <td>15851.0</td>\n",
+       "      <td>15851.0</td>\n",
+       "      <td>15851.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-05</th>\n",
+       "      <td>15871.0</td>\n",
+       "      <td>16302.0</td>\n",
+       "      <td>15350.0</td>\n",
+       "      <td>16245.0</td>\n",
+       "      <td>16245.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-06</th>\n",
+       "      <td>16237.0</td>\n",
+       "      <td>16499.0</td>\n",
+       "      <td>15977.0</td>\n",
+       "      <td>16107.0</td>\n",
+       "      <td>16107.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-07</th>\n",
+       "      <td>16125.0</td>\n",
+       "      <td>16449.0</td>\n",
+       "      <td>16125.0</td>\n",
+       "      <td>16309.0</td>\n",
+       "      <td>16309.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-24</th>\n",
+       "      <td>124731.0</td>\n",
+       "      <td>125257.0</td>\n",
+       "      <td>124259.0</td>\n",
+       "      <td>124306.0</td>\n",
+       "      <td>124306.0</td>\n",
+       "      <td>9211500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-27</th>\n",
+       "      <td>124297.0</td>\n",
+       "      <td>124535.0</td>\n",
+       "      <td>124081.0</td>\n",
+       "      <td>124496.0</td>\n",
+       "      <td>124496.0</td>\n",
+       "      <td>4327600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-28</th>\n",
+       "      <td>124498.0</td>\n",
+       "      <td>125392.0</td>\n",
+       "      <td>123537.0</td>\n",
+       "      <td>123780.0</td>\n",
+       "      <td>123780.0</td>\n",
+       "      <td>9179800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-29</th>\n",
+       "      <td>123780.0</td>\n",
+       "      <td>123780.0</td>\n",
+       "      <td>122458.0</td>\n",
+       "      <td>122707.0</td>\n",
+       "      <td>122707.0</td>\n",
+       "      <td>8257700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-31</th>\n",
+       "      <td>122704.0</td>\n",
+       "      <td>122837.0</td>\n",
+       "      <td>121929.0</td>\n",
+       "      <td>122098.0</td>\n",
+       "      <td>122098.0</td>\n",
+       "      <td>15918600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6044 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Open      High       Low     Close  Adj Close    Volume\n",
+       "Date                                                                   \n",
+       "2000-01-03   17098.0   17408.0   16719.0   16930.0    16930.0         0\n",
+       "2000-01-04   16908.0   16908.0   15851.0   15851.0    15851.0         0\n",
+       "2000-01-05   15871.0   16302.0   15350.0   16245.0    16245.0         0\n",
+       "2000-01-06   16237.0   16499.0   15977.0   16107.0    16107.0         0\n",
+       "2000-01-07   16125.0   16449.0   16125.0   16309.0    16309.0         0\n",
+       "...              ...       ...       ...       ...        ...       ...\n",
+       "2024-05-24  124731.0  125257.0  124259.0  124306.0   124306.0   9211500\n",
+       "2024-05-27  124297.0  124535.0  124081.0  124496.0   124496.0   4327600\n",
+       "2024-05-28  124498.0  125392.0  123537.0  123780.0   123780.0   9179800\n",
+       "2024-05-29  123780.0  123780.0  122458.0  122707.0   122707.0   8257700\n",
+       "2024-05-31  122704.0  122837.0  121929.0  122098.0   122098.0  15918600\n",
+       "\n",
+       "[6044 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e17b2555-eb73-4528-ab3c-1f1eb98e11f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stock_data.to_csv('IBOV.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03408c3d-881a-4e36-838a-cccc3a875cef",
+   "id": "6d0d4364-7dff-4b7c-bfca-5079a2f3acbe",
    "metadata": {},
    "outputs": [],
    "source": []
