--- a/download.ipynb
+++ b/download.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "a2421e1f-f416-4e86-b07a-007f7e89e9c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import yfinance as yf\n",
     "import datetime\n",
-    "import pandas as pd\n",
-    "import numpy as np"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "03408c3d-881a-4e36-838a-cccc3a875cef",
    "metadata": {},
    "outputs": [
@@ -34,12 +33,16 @@
     "end_date = \"2024-06-01\"\n",
     "ticker = \"^BVSP\"\n",
     "\n",
-    "stock_data = yf.download(ticker, start=start_date, end=end_date, interval = '1d')"
+    "stock_data = yf.download(ticker, start=start_date, end=end_date, interval = '1d')\n",
+    "stock_data = stock_data.drop(columns=['Adj Close'])\n",
+    "stock_data['Volume'] = stock_data['Volume'].div(1000000)\n",
+    "stock_data.rename(columns = {'Volume':'Volume (in Million)'}, inplace = True)\n",
+    "stock_data = stock_data.reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "fc6e19b0-5062-4ee3-84e7-7735f9003299",
    "metadata": {},
    "outputs": [
@@ -64,68 +67,59 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Date</th>\n",
        "      <th>Open</th>\n",
        "      <th>High</th>\n",
        "      <th>Low</th>\n",
        "      <th>Close</th>\n",
-       "      <th>Adj Close</th>\n",
-       "      <th>Volume</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>Volume (in Million)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2000-01-03</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2000-01-03</td>\n",
        "      <td>17098.0</td>\n",
        "      <td>17408.0</td>\n",
        "      <td>16719.0</td>\n",
        "      <td>16930.0</td>\n",
-       "      <td>16930.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2000-01-04</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2000-01-04</td>\n",
        "      <td>16908.0</td>\n",
        "      <td>16908.0</td>\n",
        "      <td>15851.0</td>\n",
        "      <td>15851.0</td>\n",
-       "      <td>15851.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2000-01-05</th>\n",
+       "      <th>2</th>\n",
+       "      <td>2000-01-05</td>\n",
        "      <td>15871.0</td>\n",
        "      <td>16302.0</td>\n",
        "      <td>15350.0</td>\n",
        "      <td>16245.0</td>\n",
-       "      <td>16245.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2000-01-06</th>\n",
+       "      <th>3</th>\n",
+       "      <td>2000-01-06</td>\n",
        "      <td>16237.0</td>\n",
        "      <td>16499.0</td>\n",
        "      <td>15977.0</td>\n",
        "      <td>16107.0</td>\n",
-       "      <td>16107.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2000-01-07</th>\n",
+       "      <th>4</th>\n",
+       "      <td>2000-01-07</td>\n",
        "      <td>16125.0</td>\n",
        "      <td>16449.0</td>\n",
        "      <td>16125.0</td>\n",
        "      <td>16309.0</td>\n",
-       "      <td>16309.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -137,49 +131,49 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-05-24</th>\n",
+       "      <th>6039</th>\n",
+       "      <td>2024-05-24</td>\n",
        "      <td>124731.0</td>\n",
        "      <td>125257.0</td>\n",
        "      <td>124259.0</td>\n",
        "      <td>124306.0</td>\n",
-       "      <td>124306.0</td>\n",
-       "      <td>9211500</td>\n",
+       "      <td>9.2115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-05-27</th>\n",
+       "      <th>6040</th>\n",
+       "      <td>2024-05-27</td>\n",
        "      <td>124297.0</td>\n",
        "      <td>124535.0</td>\n",
        "      <td>124081.0</td>\n",
        "      <td>124496.0</td>\n",
-       "      <td>124496.0</td>\n",
-       "      <td>4327600</td>\n",
+       "      <td>4.3276</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-05-28</th>\n",
+       "      <th>6041</th>\n",
+       "      <td>2024-05-28</td>\n",
        "      <td>124498.0</td>\n",
        "      <td>125392.0</td>\n",
        "      <td>123537.0</td>\n",
        "      <td>123780.0</td>\n",
-       "      <td>123780.0</td>\n",
-       "      <td>9179800</td>\n",
+       "      <td>9.1798</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-05-29</th>\n",
+       "      <th>6042</th>\n",
+       "      <td>2024-05-29</td>\n",
        "      <td>123780.0</td>\n",
        "      <td>123780.0</td>\n",
        "      <td>122458.0</td>\n",
        "      <td>122707.0</td>\n",
-       "      <td>122707.0</td>\n",
-       "      <td>8257700</td>\n",
+       "      <td>8.2577</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-05-31</th>\n",
+       "      <th>6043</th>\n",
+       "      <td>2024-05-31</td>\n",
        "      <td>122704.0</td>\n",
        "      <td>122837.0</td>\n",
        "      <td>121929.0</td>\n",
        "      <td>122098.0</td>\n",
-       "      <td>122098.0</td>\n",
-       "      <td>15918600</td>\n",
+       "      <td>15.9186</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -187,24 +181,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                Open      High       Low     Close  Adj Close    Volume\n",
-       "Date                                                                   \n",
-       "2000-01-03   17098.0   17408.0   16719.0   16930.0    16930.0         0\n",
-       "2000-01-04   16908.0   16908.0   15851.0   15851.0    15851.0         0\n",
-       "2000-01-05   15871.0   16302.0   15350.0   16245.0    16245.0         0\n",
-       "2000-01-06   16237.0   16499.0   15977.0   16107.0    16107.0         0\n",
-       "2000-01-07   16125.0   16449.0   16125.0   16309.0    16309.0         0\n",
-       "...              ...       ...       ...       ...        ...       ...\n",
-       "2024-05-24  124731.0  125257.0  124259.0  124306.0   124306.0   9211500\n",
-       "2024-05-27  124297.0  124535.0  124081.0  124496.0   124496.0   4327600\n",
-       "2024-05-28  124498.0  125392.0  123537.0  123780.0   123780.0   9179800\n",
-       "2024-05-29  123780.0  123780.0  122458.0  122707.0   122707.0   8257700\n",
-       "2024-05-31  122704.0  122837.0  121929.0  122098.0   122098.0  15918600\n",
+       "           Date      Open      High       Low     Close  Volume (in Million)\n",
+       "0    2000-01-03   17098.0   17408.0   16719.0   16930.0               0.0000\n",
+       "1    2000-01-04   16908.0   16908.0   15851.0   15851.0               0.0000\n",
+       "2    2000-01-05   15871.0   16302.0   15350.0   16245.0               0.0000\n",
+       "3    2000-01-06   16237.0   16499.0   15977.0   16107.0               0.0000\n",
+       "4    2000-01-07   16125.0   16449.0   16125.0   16309.0               0.0000\n",
+       "...         ...       ...       ...       ...       ...                  ...\n",
+       "6039 2024-05-24  124731.0  125257.0  124259.0  124306.0               9.2115\n",
+       "6040 2024-05-27  124297.0  124535.0  124081.0  124496.0               4.3276\n",
+       "6041 2024-05-28  124498.0  125392.0  123537.0  123780.0               9.1798\n",
+       "6042 2024-05-29  123780.0  123780.0  122458.0  122707.0               8.2577\n",
+       "6043 2024-05-31  122704.0  122837.0  121929.0  122098.0              15.9186\n",
        "\n",
        "[6044 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "e17b2555-eb73-4528-ab3c-1f1eb98e11f0",
    "metadata": {},
    "outputs": [],
