--- a/NIFTY_data_manipulation.ipynb
+++ b/NIFTY_data_manipulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "73d2dd54-0e0a-458b-88b4-3f9bfcf2fd3a",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "77db664e-3df4-4825-afef-fd203ad335ad",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "b29de629-32c9-4c50-a127-296668807bee",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "Index(['Date', 'Price', 'Open', 'High', 'Low', 'Vol.', 'Change %'], dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,10 +44,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
+   "id": "4c920596-549c-470d-abd4-1600d9443bbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1['Date'] = pd.to_datetime(df1['Date'], dayfirst=True)\n",
+    "df2['Date'] = pd.to_datetime(df2['Date'], dayfirst=True)\n",
+    "combined_df = pd.concat([df1, df2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "079262e9-86dd-4122-8f85-f71b20413321",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Rushi\\AppData\\Local\\Temp\\ipykernel_16512\\978688206.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  filtered_df['Vol.'] = filtered_df['Vol.'].str.replace('B', '')\n",
+      "C:\\Users\\Rushi\\AppData\\Local\\Temp\\ipykernel_16512\\978688206.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  filtered_df.rename(columns = {'Price':'Close', 'Vol.':'Volume (in Billion)'}, inplace = True)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -70,12 +99,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Date</th>\n",
-       "      <th>Price</th>\n",
+       "      <th>Close</th>\n",
        "      <th>Open</th>\n",
        "      <th>High</th>\n",
        "      <th>Low</th>\n",
-       "      <th>Vol.</th>\n",
-       "      <th>Change %</th>\n",
+       "      <th>Volume (in Billion)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -86,8 +114,7 @@
        "      <td>1,482.15</td>\n",
        "      <td>1,592.90</td>\n",
        "      <td>1,482.15</td>\n",
-       "      <td>25.36B</td>\n",
-       "      <td>7.55%</td>\n",
+       "      <td>25.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -96,8 +123,7 @@
        "      <td>1,594.40</td>\n",
        "      <td>1,641.95</td>\n",
        "      <td>1,594.40</td>\n",
-       "      <td>38.79B</td>\n",
-       "      <td>2.92%</td>\n",
+       "      <td>38.79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -106,8 +132,7 @@
        "      <td>1,634.55</td>\n",
        "      <td>1,635.50</td>\n",
        "      <td>1,555.05</td>\n",
-       "      <td>62.15B</td>\n",
-       "      <td>-2.62%</td>\n",
+       "      <td>62.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -116,8 +141,7 @@
        "      <td>1,595.80</td>\n",
        "      <td>1,639.00</td>\n",
        "      <td>1,595.80</td>\n",
-       "      <td>51.27B</td>\n",
-       "      <td>1.37%</td>\n",
+       "      <td>51.27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -126,12 +150,10 @@
        "      <td>1,616.60</td>\n",
        "      <td>1,628.25</td>\n",
        "      <td>1,597.20</td>\n",
-       "      <td>54.32B</td>\n",
-       "      <td>-0.27%</td>\n",
+       "      <td>54.32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -146,8 +168,7 @@
        "      <td>23,038.95</td>\n",
        "      <td>23,110.80</td>\n",
        "      <td>22,871.20</td>\n",
-       "      <td>260.01B</td>\n",
-       "      <td>-0.11%</td>\n",
+       "      <td>260.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6067</th>\n",
@@ -156,8 +177,7 @@
        "      <td>22,977.15</td>\n",
        "      <td>22,998.55</td>\n",
        "      <td>22,858.50</td>\n",
-       "      <td>217.89B</td>\n",
-       "      <td>-0.19%</td>\n",
+       "      <td>217.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6068</th>\n",
@@ -166,8 +186,7 @@
        "      <td>22,762.75</td>\n",
        "      <td>22,825.50</td>\n",
        "      <td>22,685.45</td>\n",
-       "      <td>269.93B</td>\n",
-       "      <td>-0.80%</td>\n",
+       "      <td>269.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6069</th>\n",
@@ -176,8 +195,7 @@
        "      <td>22,617.45</td>\n",
        "      <td>22,705.75</td>\n",
        "      <td>22,417.00</td>\n",
-       "      <td>373.37B</td>\n",
-       "      <td>-0.95%</td>\n",
+       "      <td>373.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6070</th>\n",
@@ -186,51 +204,63 @@
        "      <td>22,568.10</td>\n",
        "      <td>22,653.75</td>\n",
        "      <td>22,465.10</td>\n",
-       "      <td>572.12B</td>\n",
-       "      <td>0.19%</td>\n",
+       "      <td>572.12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6071 rows × 7 columns</p>\n",
+       "<p>6071 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Date      Price       Open       High        Low     Vol. Change %\n",
-       "0    2000-01-03   1,592.20   1,482.15   1,592.90   1,482.15   25.36B    7.55%\n",
-       "1    2000-01-04   1,638.70   1,594.40   1,641.95   1,594.40   38.79B    2.92%\n",
-       "2    2000-01-05   1,595.80   1,634.55   1,635.50   1,555.05   62.15B   -2.62%\n",
-       "3    2000-01-06   1,617.60   1,595.80   1,639.00   1,595.80   51.27B    1.37%\n",
-       "4    2000-01-07   1,613.30   1,616.60   1,628.25   1,597.20   54.32B   -0.27%\n",
-       "...         ...        ...        ...        ...        ...      ...      ...\n",
-       "6066 2024-05-27  22,932.45  23,038.95  23,110.80  22,871.20  260.01B   -0.11%\n",
-       "6067 2024-05-28  22,888.15  22,977.15  22,998.55  22,858.50  217.89B   -0.19%\n",
-       "6068 2024-05-29  22,704.70  22,762.75  22,825.50  22,685.45  269.93B   -0.80%\n",
-       "6069 2024-05-30  22,488.65  22,617.45  22,705.75  22,417.00  373.37B   -0.95%\n",
-       "6070 2024-05-31  22,530.70  22,568.10  22,653.75  22,465.10  572.12B    0.19%\n",
+       "           Date      Close       Open       High        Low  \\\n",
+       "0    2000-01-03   1,592.20   1,482.15   1,592.90   1,482.15   \n",
+       "1    2000-01-04   1,638.70   1,594.40   1,641.95   1,594.40   \n",
+       "2    2000-01-05   1,595.80   1,634.55   1,635.50   1,555.05   \n",
+       "3    2000-01-06   1,617.60   1,595.80   1,639.00   1,595.80   \n",
+       "4    2000-01-07   1,613.30   1,616.60   1,628.25   1,597.20   \n",
+       "...         ...        ...        ...        ...        ...   \n",
+       "6066 2024-05-27  22,932.45  23,038.95  23,110.80  22,871.20   \n",
+       "6067 2024-05-28  22,888.15  22,977.15  22,998.55  22,858.50   \n",
+       "6068 2024-05-29  22,704.70  22,762.75  22,825.50  22,685.45   \n",
+       "6069 2024-05-30  22,488.65  22,617.45  22,705.75  22,417.00   \n",
+       "6070 2024-05-31  22,530.70  22,568.10  22,653.75  22,465.10   \n",
        "\n",
-       "[6071 rows x 7 columns]"
+       "     Volume (in Billion)  \n",
+       "0                  25.36  \n",
+       "1                  38.79  \n",
+       "2                  62.15  \n",
+       "3                  51.27  \n",
+       "4                  54.32  \n",
+       "...                  ...  \n",
+       "6066              260.01  \n",
+       "6067              217.89  \n",
+       "6068              269.93  \n",
+       "6069              373.37  \n",
+       "6070              572.12  \n",
+       "\n",
+       "[6071 rows x 6 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1['Date'] = pd.to_datetime(df1['Date'], dayfirst=True)\n",
-    "df2['Date'] = pd.to_datetime(df2['Date'], dayfirst=True)\n",
-    "\n",
-    "combined_df = pd.concat([df1, df2])\n",
+    "# Dataframe manipulation\n",
     "combined_df = combined_df.drop_duplicates(subset='Date')\n",
     "combined_df = combined_df.sort_values(by='Date').reset_index(drop=True)\n",
     "end_date = pd.to_datetime('01-06-2024', dayfirst=True)\n",
     "filtered_df = combined_df[combined_df['Date'] <= end_date]\n",
+    "filtered_df['Vol.'] = filtered_df['Vol.'].str.replace('B', '')\n",
+    "filtered_df.rename(columns = {'Price':'Close', 'Vol.':'Volume (in Billion)'}, inplace = True)\n",
+    "filtered_df = filtered_df.drop(columns=['Change %'])\n",
     "filtered_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "id": "69e3d4c1-38fe-4113-bacd-3d01b279e0df",
    "metadata": {},
    "outputs": [],
@@ -242,6 +272,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "26caa2a7-1c3e-4ebe-a51f-f0f4d32a701e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9af826c2-81df-493f-9424-27124898643a",
    "metadata": {},
    "outputs": [],
    "source": []
