--- a/Data collection/download.ipynb
+++ b/Data collection/download.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "a2421e1f-f416-4e86-b07a-007f7e89e9c3",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "03408c3d-881a-4e36-838a-cccc3a875cef",
    "metadata": {},
    "outputs": [
@@ -36,13 +36,12 @@
     "stock_data = yf.download(ticker, start=start_date, end=end_date, interval = '1d')\n",
     "stock_data = stock_data.drop(columns=['Adj Close'])\n",
     "stock_data['Volume'] = stock_data['Volume'].div(1000000)\n",
-    "stock_data.rename(columns = {'Volume':'Volume (in Million)'}, inplace = True)\n",
-    "stock_data = stock_data.reset_index()"
+    "stock_data.rename(columns = {'Volume':'Volume (in Million)'}, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "fc6e19b0-5062-4ee3-84e7-7735f9003299",
    "metadata": {},
    "outputs": [
@@ -67,18 +66,24 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date</th>\n",
        "      <th>Open</th>\n",
        "      <th>High</th>\n",
        "      <th>Low</th>\n",
        "      <th>Close</th>\n",
        "      <th>Volume (in Million)</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2000-01-03</td>\n",
+       "      <th>2000-01-03</th>\n",
        "      <td>17098.0</td>\n",
        "      <td>17408.0</td>\n",
        "      <td>16719.0</td>\n",
@@ -86,8 +91,7 @@
        "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2000-01-04</td>\n",
+       "      <th>2000-01-04</th>\n",
        "      <td>16908.0</td>\n",
        "      <td>16908.0</td>\n",
        "      <td>15851.0</td>\n",
@@ -95,8 +99,7 @@
        "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2000-01-05</td>\n",
+       "      <th>2000-01-05</th>\n",
        "      <td>15871.0</td>\n",
        "      <td>16302.0</td>\n",
        "      <td>15350.0</td>\n",
@@ -104,8 +107,7 @@
        "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2000-01-06</td>\n",
+       "      <th>2000-01-06</th>\n",
        "      <td>16237.0</td>\n",
        "      <td>16499.0</td>\n",
        "      <td>15977.0</td>\n",
@@ -113,8 +115,7 @@
        "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2000-01-07</td>\n",
+       "      <th>2000-01-07</th>\n",
        "      <td>16125.0</td>\n",
        "      <td>16449.0</td>\n",
        "      <td>16125.0</td>\n",
@@ -128,11 +129,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6039</th>\n",
-       "      <td>2024-05-24</td>\n",
+       "      <th>2024-05-24</th>\n",
        "      <td>124731.0</td>\n",
        "      <td>125257.0</td>\n",
        "      <td>124259.0</td>\n",
@@ -140,8 +139,7 @@
        "      <td>9.2115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6040</th>\n",
-       "      <td>2024-05-27</td>\n",
+       "      <th>2024-05-27</th>\n",
        "      <td>124297.0</td>\n",
        "      <td>124535.0</td>\n",
        "      <td>124081.0</td>\n",
@@ -149,8 +147,7 @@
        "      <td>4.3276</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6041</th>\n",
-       "      <td>2024-05-28</td>\n",
+       "      <th>2024-05-28</th>\n",
        "      <td>124498.0</td>\n",
        "      <td>125392.0</td>\n",
        "      <td>123537.0</td>\n",
@@ -158,8 +155,7 @@
        "      <td>9.1798</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6042</th>\n",
-       "      <td>2024-05-29</td>\n",
+       "      <th>2024-05-29</th>\n",
        "      <td>123780.0</td>\n",
        "      <td>123780.0</td>\n",
        "      <td>122458.0</td>\n",
@@ -167,8 +163,7 @@
        "      <td>8.2577</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6043</th>\n",
-       "      <td>2024-05-31</td>\n",
+       "      <th>2024-05-31</th>\n",
        "      <td>122704.0</td>\n",
        "      <td>122837.0</td>\n",
        "      <td>121929.0</td>\n",
@@ -177,27 +172,28 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6044 rows × 6 columns</p>\n",
+       "<p>6044 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Date      Open      High       Low     Close  Volume (in Million)\n",
-       "0    2000-01-03   17098.0   17408.0   16719.0   16930.0               0.0000\n",
-       "1    2000-01-04   16908.0   16908.0   15851.0   15851.0               0.0000\n",
-       "2    2000-01-05   15871.0   16302.0   15350.0   16245.0               0.0000\n",
-       "3    2000-01-06   16237.0   16499.0   15977.0   16107.0               0.0000\n",
-       "4    2000-01-07   16125.0   16449.0   16125.0   16309.0               0.0000\n",
-       "...         ...       ...       ...       ...       ...                  ...\n",
-       "6039 2024-05-24  124731.0  125257.0  124259.0  124306.0               9.2115\n",
-       "6040 2024-05-27  124297.0  124535.0  124081.0  124496.0               4.3276\n",
-       "6041 2024-05-28  124498.0  125392.0  123537.0  123780.0               9.1798\n",
-       "6042 2024-05-29  123780.0  123780.0  122458.0  122707.0               8.2577\n",
-       "6043 2024-05-31  122704.0  122837.0  121929.0  122098.0              15.9186\n",
+       "                Open      High       Low     Close  Volume (in Million)\n",
+       "Date                                                                   \n",
+       "2000-01-03   17098.0   17408.0   16719.0   16930.0               0.0000\n",
+       "2000-01-04   16908.0   16908.0   15851.0   15851.0               0.0000\n",
+       "2000-01-05   15871.0   16302.0   15350.0   16245.0               0.0000\n",
+       "2000-01-06   16237.0   16499.0   15977.0   16107.0               0.0000\n",
+       "2000-01-07   16125.0   16449.0   16125.0   16309.0               0.0000\n",
+       "...              ...       ...       ...       ...                  ...\n",
+       "2024-05-24  124731.0  125257.0  124259.0  124306.0               9.2115\n",
+       "2024-05-27  124297.0  124535.0  124081.0  124496.0               4.3276\n",
+       "2024-05-28  124498.0  125392.0  123537.0  123780.0               9.1798\n",
+       "2024-05-29  123780.0  123780.0  122458.0  122707.0               8.2577\n",
+       "2024-05-31  122704.0  122837.0  121929.0  122098.0              15.9186\n",
        "\n",
-       "[6044 rows x 6 columns]"
+       "[6044 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "e17b2555-eb73-4528-ab3c-1f1eb98e11f0",
    "metadata": {},
    "outputs": [],
