--- a/Data collection/NIFTY_data_manipulation.ipynb
+++ b/Data collection/NIFTY_data_manipulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "73d2dd54-0e0a-458b-88b4-3f9bfcf2fd3a",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "id": "77db664e-3df4-4825-afef-fd203ad335ad",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "id": "b29de629-32c9-4c50-a127-296668807bee",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "Index(['Date', 'Price', 'Open', 'High', 'Low', 'Vol.', 'Change %'], dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "id": "4c920596-549c-470d-abd4-1600d9443bbe",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "id": "079262e9-86dd-4122-8f85-f71b20413321",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "[6071 rows x 5 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,12 +245,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "id": "69e3d4c1-38fe-4113-bacd-3d01b279e0df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_df.to_csv('NIFTY.csv')"
+    "filtered_df.to_csv('D:/UFG/Data collection/NIFTY.csv')"
    ]
   },
   {
