--- a/Statistic model/Data_manipulation.ipynb
+++ b/Statistic model/Data_manipulation.ipynb
@@ -437,11 +437,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f8572783-b692-415e-b5b2-7e67a42134f2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def plot_with_anomalies(df, anomalies_df, interval):\n",
+    "    # Assuming 'Date' is in datetime format and set as index for the nifty_df dataframe\n",
+    "    #anomalies_df['Date'] = pd.to_datetime(anomalies_df['Date'])\n",
+    "    #anomalies_df.set_index('Date', inplace=True)\n",
+    "    if 'Date' in df.columns:\n",
+    "        df['Date'] = pd.to_datetime(df['Date'])\n",
+    "        df.set_index('Date', inplace=True)\n",
+    "\n",
+    "    # Define the start and end years\n",
+    "    start_year = 2000\n",
+    "    end_year = 2025\n",
+    "\n",
+    "    # Loop through each 2-year segment and plot the data\n",
+    "    for year in range(start_year, end_year, interval):\n",
+    "        start_date = f\"{year}-01-01\"\n",
+    "        end_date = f\"{year + interval - 1}-12-31\"\n",
+    "        \n",
+    "        # Slice the data for the current year segment\n",
+    "        segment = df[start_date:end_date]\n",
+    "        anomalies_in_segment = anomalies_df[start_date:end_date]\n",
+    "\n",
+    "        # Plot the current segment\n",
+    "        plt.figure(figsize=(12, 6))\n",
+    "        plt.plot(segment.index, segment['Close'], label=\"Close Price\", color='blue')\n",
+    "        \n",
+    "        # Mark anomalies\n",
+    "        plt.scatter(anomalies_in_segment.index, segment.loc[anomalies_in_segment.index]['Close'], color='red', label='Anomaly')\n",
+    "        \n",
+    "        # Plot settings\n",
+    "        plt.title(f'Data with Anomalies ({year}-{year + interval - 1})')\n",
+    "        plt.xlabel('Date')\n",
+    "        plt.ylabel('Close Price')\n",
+    "        plt.legend()\n",
+    "        plt.grid(True)\n",
+    "        plt.show()"
+   ]
   },
   {
    "cell_type": "code",
