--- a/Unsupervised model/Isolation_Forest.ipynb
+++ b/Unsupervised model/Isolation_Forest.ipynb
@@ -16,14 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "id": "165b0901-0978-4ef3-9d84-7b0771ab3f7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import IsolationForest\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
+    "# Isolation Forest\n",
     "\n",
     "def detect_anomalies_isolation_forest(df, contamination=0.15, n_estimators=252, max_samples='auto', max_features=0.5):\n",
     "    \"\"\"\n",
